--- a/buy.html
+++ b/buy.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <header>
-       <img src="./photo/logo.jpeg" alt="Logo" width="120" />
-      <a class="cart-icon" href="">home</a>
-      <div  id="cart-icon" title="سلة التسوق" onclick="toggleCart()">
+      <img src="./photo/logo.jpeg" alt="Logo" width="120" />
+      <a class="cart-icon" href="index.html">home</a>
+      <div id="cart-icon" title="سلة التسوق" onclick="toggleCart()">
         🛒
         <span id="cart-count">0</span>
       </div>
@@ -48,7 +48,7 @@
         </div>
       </div>
     </div>
-    <img src="" alt="">
+    <img src="" alt="" />
     <!-- مودال سلة التسوق -->
     <div
       id="cart"
@@ -57,12 +57,13 @@
     >
       <div id="cart-content">
         <span class="close-btn" onclick="toggleCart()">×</span>
-        <h2>سلة التسوق</h2>
+        <h2>agkعMaz</h2>
         <div id="cart-items"></div>
         <div id="cart-total"></div>
+        <div id="cart-buy"><button id="cart-buy">BUY</button></div>
       </div>
     </div>
-    
+
     <script>
       // بيانات المنتجات - 20 منتج مع السعر، المقاسات، والألوان
       const productsData = [
